Closed Bug 1313517 Opened 9 years ago Closed 9 years ago

ADTS demuxer incorrectly set to not calculate start time

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: jya, Assigned: jya)

Details

Attachments

(1 file)

ADTSDemuxer::ShouldComputeStartTime returns false. This is incorrect. Start time should only not be calculated with MSE
Attachment #8805283 - Flags: review?(dglastonbury) → review+
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/011fe8bad1eb Always compute start time with ADTS. r=kamidphish
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: