Bug 1313517: Always compute start time with ADTS. r=kamidphish

This was originally copied from the MP3Demuxer and was only required to work around an issue now fixed.
Only MSE should set ShoultComputeStartTime to false, even if the ADTS demuxer always returns a first sample with a time of 0.

MozReview-Commit-ID: DMRLpxC5mU1

--HG--
extra : rebase_source : e6548ee47f33a78a5178faae23d36dee2713adb2